[package]
name = "packet-parser-aya-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
aya-bpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", branch = "main" }
packet-parser-aya-common = { path = "../packet-parser-aya-common" }

packet-parser = {path = "../bpf-packet-parser", features = ["inline"], default-features=false}

[[bin]]
name = "packet-parser-aya"
path = "src/main.rs"

[profile.dev]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = "abort"
incremental = false
codegen-units = 1
rpath = false

[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[workspace]
members = []
