[package]
name = "packet-parser-aya"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = { version = ">=0.11", features=["async_tokio"] }
aya-log = "0.1"
packet-parser-aya-common = { path = "../packet-parser-aya-common", features=["user"] }
anyhow = "1.0.42"
clap = { version = "4.0", features = ["derive"] }
env_logger = "0.10"
log = "0.4"
tokio = { version = "1.23", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }

[[bin]]
name = "packet-parser-aya"
path = "src/main.rs"
